# share-engine

./: LICENSE  README.md  package-lock.json
.github/workflows/: fly.yml
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  fly.toml  main.py  pyproject.toml
backend/app/: generate-openapi.py  main.py
backend/app/db/: database.py
backend/app/db/local/: init.sql
backend/app/models/: group.py  group_item.py  item.py  rent_log.py  user.py  user_group.py
backend/app/routes/: auth.py  file.py  item.py  user.py
backend/app/schemas/: auth.py  group.py  item.py  rent_log.py  user.py  user_group.py
backend/app/services/: auth_service.py  file_service.py  item_service.py  user_service.py
backend/playground/: api.rest  items.sql  rend_logs.sql
backend/s3/: init.py
backend/scripts/: generate.sh  run.sh
frontend/ShareEngine/: .env-sample  .env.production  .gitignore  app.json  package-lock.json  package.json
frontend/ShareEngine/android/: settings.gradle
frontend/ShareEngine/android/app/: build.gradle
frontend/ShareEngine/ios/: Podfile
frontend/ShareEngine/ios/ShareEngine/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
frontend/ShareEngine/ios/ShareEngine.xcodeproj/: project.pbxproj
frontend/ShareEngine/ios/ShareEngine.xcworkspace/: contents.xcworkspacedata
frontend/ShareEngine/src/: App.tsx  Styles.tsx  Utils.tsx  dummyItems.tsx
frontend/ShareEngine/src/components/: Item.tsx  (+3 more)
infrastructure/: .gitignore  .main.tf.swp  .terraform.lock.hcl  README.md  main.tf  project.tf  provider.tf  variables.tf
(+12 files in other folders)
