[tool.poetry]
name = "ShareEngine"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
google-cloud-storage = "^2.14.0"
pyjwt = "^2.8.0"
passlib = "^1.7.4"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
